--- a/6장 영상공간 필터링.ipynb
+++ b/6장 영상공간 필터링.ipynb
@@ -11,7 +11,10 @@
   {
    "cell_type": "markdown",
    "id": "8e06155d-9b6a-4b44-8da9-14bbdb39ad99",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 블러 필터"
    ]
@@ -169,6 +172,7 @@
    "cell_type": "markdown",
    "id": "678da3d1-3c1a-432b-a036-0dba01daae74",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -480,7 +484,10 @@
   {
    "cell_type": "markdown",
    "id": "fcb08ba9-378b-4357-9394-e5ebdb6c654f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 일반적인 필터 연산"
    ]
@@ -683,6 +690,7 @@
    "cell_type": "markdown",
    "id": "e741a832-f6a3-4573-a500-13f09e7c1c0e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -771,6 +779,7 @@
    "cell_type": "markdown",
    "id": "2452badf-9dfe-49db-889f-e958508024da",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -903,7 +912,10 @@
   {
    "cell_type": "markdown",
    "id": "4f425be7-e4d3-41ac-872b-773f8c4e974e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 템플릿 매칭"
    ]
@@ -949,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "20d4ea1c-8a91-4d40-91ab-6f0961358795",
    "metadata": {},
    "outputs": [
@@ -1010,28 +1022,12 @@
     "cv2.rectangle(dst, maxLoc, (maxLoc[0]+w, maxLoc[1]+h), (0, 0, 255), 2)\n",
     "# 참조 영상 src에서 템플릿 tmp_b를 cv2.TM_CCOEFF_NORMED 방법으로 매칭한 결과를 R3에 저장한다.\n",
     "# cv2.minMaxLoc(R3)로 최대값 maxVal 와 최대값 위치 maxLoc를 찾는다.\n",
-    "# cv2.rectangle()로 최대값 위치 maxLoc와 tmp_b의 크기(h, w)를 이용한 모서리\n",
+    "# cv2.rectangle()로 최대값 위치 maxLoc와 tmp_b의 크기(h, w)를 이용한 모서리 좌표(maxLoc[0] + w.maxLoc[1] + h)로 dst에 사각형을 표시한다.\n",
     "\n",
     "cv2.imshow('dst',  dst)\n",
     "cv2.waitKey()\n",
     "cv2.destroyAllWindows()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e280c32-184a-45be-af09-01930f2bba56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00f23c20-9448-4683-aa68-65df2362ac4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
